Enable pagination for results

--- a/web/MapStatsWeb/Properties/launchSettings.json
+++ b/web/MapStatsWeb/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost/MapStatsWeb",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:57615/",
       "sslPort": 0
@@ -11,6 +15,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "/mapstats/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -18,6 +23,7 @@
     "MapStatsWeb": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "mapstats/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
