--- a/web/MapStatsWeb/Published/web.config
+++ b/web/MapStatsWeb/Published/web.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <system.webServer>
-    <handlers>
-      <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
-    </handlers>
-    <aspNetCore processPath="dotnet" arguments=".\MapStatsWeb.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" />
-  </system.webServer>
+  <location path="." inheritInChildApplications="false">
+    <system.webServer>
+      <handlers>
+        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
+      </handlers>
+      <aspNetCore processPath="dotnet" arguments=".\MapStatsWeb.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" />
+    </system.webServer>
+  </location>
 </configuration>
 <!--ProjectGuid: ade66433-ef47-4988-98bb-dde8623cf443-->
